decal-macros/tests/ui/fail/fragment_invalid_args.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Fragment()
    };

    let _ = decal! {
        Fragment(1, 2)
    };
}
