decal-macros/tests/ui/fail/fragment_invalid_args.stderr
error: `Fragment` node expects a single argument
 --> tests/ui/fail/fragment_invalid_args.rs:5:9
  |
5 |         Fragment()
  |         ^^^^^^^^

error: `Fragment` node expects a single argument
 --> tests/ui/fail/fragment_invalid_args.rs:9:9
  |
9 |         Fragment(1, 2)
  |         ^^^^^^^^
